--- a/ProjetoA3_BlueWorld/pom.xml
+++ b/ProjetoA3_BlueWorld/pom.xml
@@ -12,4 +12,13 @@
         <exec.mainClass>br.com.grupo04.ProjetoA3_BlueWorld</exec.mainClass>
     </properties>
     <name>ProjetoA3_BlueWorld</name>
+
+    <!-- Dependência para a biblioteca dotenv-java -->
+    <dependencies>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+    </dependencies>
 </project>
